# py-interview-try-2

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DATA_CONSISTENCY_REPORT.md  LLM_MANIFEST.md  Makefile  PLAN.md  PR_REVIEW.md  README.md  REFACTOR_PLAN.md  REFACTOR_SUMMARY.md  TODO.md  deploy.sh  main.py  mcp_server.py  pyproject.toml
.claude/: settings.json
.claude/agents/: test-reporter.md
.github/workflows/: deploy.yml
backend/: ARCHITECTURE.md  Dockerfile  pyproject.toml
backend/scripts/: cleanup_test_db.sh
backend/tests/: __init__.py  ruff.toml  test_extract_worker.py  test_leaf_interview.py  test_message_buckets.py  test_messages.py  test_schema.py  test_small_talk.py  test_telegram.py  test_tokens.py  test_tree_utils.py
business-plan/: COMPETITORS.md  DAILY-VALIDATION-LOG.md  FOCUS-GROUP-RESULTS.md  INVESTOR-FEEDBACK.md  MARKET-SEGMENTS.md  MARKETING-FOUNDATIONS.md  PRICING-STRATEGY-SYNTHESIS.md  README.md  REVIEW-2026-02-24.md  STAGE-1-EXECUTION-GUIDE.md  TOKEN-COSTS.md  VALIDATION-PLAN.md
business-plan/materials/: README.md
business-plan/stage-1-validation/: 01-week-1-checklist.md  02-payment-options.md  03-landing-page-copy.md  04-reddit-posts.md  05-outreach-scripts.md  06-tracking-template.md  07-seo-strategy.md  PLAN.md
business-plan/stage-2-mvp/: PLAN.md
business-plan/stage-3-growth/: PLAN.md
deploy/: README.md  deploy-interview.sh  deploy-landing.sh  deploy-traefik.sh  setup-vps.sh
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.mcp  nginx.conf
frontend/: .env.example  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
frontend/public/: robots.txt
scripts/: test_report.sh
src/: ai.py  config.py  db.py  graph.py  ids.py  message_buckets.py  state.py  timestamp.py
src/application/: __init__.py  (+2 more)
tests/: conftest.py  test_api_managers.py  test_commands.py  test_connection.py  test_deps.py  test_extract_data.py  test_extract_worker.py  test_graph_worker.py  test_interview_managers.py  test_interview_nodes.py  test_knowledge_extraction.py  test_leaf_interview.py  test_life_areas.py  test_load_history.py  test_message_buckets.py  test_retry.py  test_root_state.py  test_router_area_graph.py  test_runtime.py  test_schema.py  test_session.py  test_similarity.py  test_small_talk.py  test_state.py  test_telegram.py  test_tools.py
(+323 files in other folders)
