[project]
name = "interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.7",
    "langchain-openai>=1.1.7",
    "langchain-tools>=0.1.34",
    "langgraph>=1.0.7",
    "python-json-logger>=2.0.7",
    "uuid7>=0.1.0",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.1.0",
    "pre-commit>=3.7.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.6.9",
    "vulture>=2.11",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["F", "I"]
extend-select = ["PLR"]

[tool.ruff.lint.pylint]
max-statements = 15


[tool.vulture]
min_confidence = 80
paths = ["src"]
exclude = [
    ".ipynb_checkpoints",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]
